# sigscan

./: README.md  pyproject.toml  requirements.txt
examples/: README.md  example.txt
patternscan/: cli.py
patternscan/core/: models.py  scanner.py  utils.py
patternscan/parsers/: __init__.py  json_parser.py
patternscan/patterns/: __init__.py  base.py  secrets.py  web.py
sigscan/: cli.py
sigscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sigscan/ai/: ai_mode.py
sigscan/core/: loader.py  reporting.py  scanner.py  utils.py
sigscan/parsers/: base.py  text.py  xml_parser.py
sigscan/patterns/: base.py  endpoints.py  secrets.py
tests/: __init__.py  test_smoke.py
tests/integration/: README.md  __init__.py  conftest.py  test_ai_mode_prompt_preview.py  test_binary_file_graceful.py  test_dir_mode_all_plugins_end_to_end.py  test_entropy_detection.py  test_file_mode_secrets_only.py  test_json_and_xml_parsers.py  test_max_file_size_and_include_globs.py  test_plugin_selection_and_outputs.py
tests/integration/assets/dataset/: endpoints.txt  entropy.txt  latin1.txt  nested.json  sample.xml  secrets.txt  single_secrets.txt  web.html
