[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigscan"
version = "0.1.0"
description = "Plugin-driven recursive pattern scanner with AI mode (llama.cpp)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "chardet>=5.1",
]

[project.optional-dependencies]
ai = ["llama-cpp-python>=0.2.0"]

[project.scripts]
sigscan = "sigscan.cli:main"
